src/test/ui/codemap_tests/unicode.stderr
error[E0703]: invalid ABI: found `路濫狼á́́`
  --> $DIR/unicode.rs:1:8
   |
LL | extern "路濫狼á́́" fn foo() {}
   |        ^^^^^^^^^ invalid ABI
   |
   = help: valid ABIs: cdecl, stdcall, fastcall, vectorcall, thiscall, aapcs, win64, sysv64, ptx-kernel, msp430-interrupt, x86-interrupt, amdgpu-kernel, Rust, C, system, rust-intrinsic, rust-call, platform-intrinsic, unadjusted

error: aborting due to previous error

